--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,39 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Sandbox</title>
-    <link rel="stylesheet" href="private/dist/main.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="private/scripts/src/dashboard/dependencies/gridster/jquery.gridster.min.css" />
+<!DOCTYPE>
+<html ng-app = "myApp">
+<head>
+		<Title> Twitter Sentiment </title>
 
-  </head>
-  <body class="sandbox">
-    <div id="content" style="width:100%; height:100%"></div>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="private/scripts/src/dashboard/dependencies/gridster/jquery.gridster.min.js"></script>
-    <script type="text/javascript" src="private/dist/bundle.js"></script>
-  </body>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+</head>
+<body>
+	<div class="container" ng-controller="AppCtrl">
+		<h1> Twitter Sentiment </h1>
+		<table class="table">
+			<tbody>
+				<tr>
+					<td>
+						<div class="input-group input-group-lg">
+							<input class='form-control' type="text" placeholder="Name" ng-model='task.name'>
+							<span class="input-group-btn">
+						        <button class="btn btn-default" type="button" ng-click="addContact()">Analyze</button>
+						        
+						     </span>
+						</div>
+					</td>
+					
+				</tr>
+				<tr ng-repeat = "task in contactlist">
+					<td>{{task}}</td>
+					<td><button class='btn-danger' ng-click="deleteName(task)">Delete</td>
+				</tr>	
+			</tbody>
+		</table>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.1/angular.min.js"></script>
+	<script src="controllers/controller.js"></script>
+</body>
 </html>
