--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container" ng-controller="AppCtrl">
+	<div style =" height : 100px;">
+	</div>
+	<div class="container" ng-controller="AppCtrl" style=" border: 5px solid; padding-top: 30px; padding:30px;width:600px; height:400px;" >
 		<h1> Goldman Sentiment Sentiment </h1>
 		<table class="table">
 			<tbody>
