--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html ng-app = "myApp">
 <head>
-		<Title> Goldman Sentiment Finder </title>
+		<Title>Twitter Sentiment</title>
 
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 	<div style =" height : 100px;">
 	</div>
 	<div class="container" ng-controller="AppCtrl" style=" border: 5px solid; padding-top: 30px; padding:30px;width:600px; height:400px;" >
-		<h1> Goldman Sentiment Sentiment </h1>
+		<h1>Twitter Sentiment</h1>
 		<table class="table">
 			<tbody>
 				<tr>
